# MediBridgeX

./: .gitignore  LICENSE  README.md  render.yaml  roadmap.md
.trash/: docker-compose.yml  middleware.ts  package-lock.json  package.json  test-browser.js
.trash/app/: page.tsx
.trash/backend/: .gitignore  pyproject.toml
.trash/backend/alembic/: env.py
.trash/backend/alembic/versions/: 4f729c90183d_add_webhook_endpoint.py
.trash/backend/app/api/: deps.py
.trash/backend/app/api/v1/: __init__.py  audit.py  developers.py  fhir.py  messages.py  settings.py
.trash/backend/app/core/: audit.py  limiter.py  webhooks.py
.trash/backend/app/models/: all_models.py
.trash/backend/tests/: conftest.py  test_main.py  test_webhooks.py
.trash/config/: api.ts  app.config.ts
.trash/constants/: navigation.ts  theme.ts
.trash/data/: developers-mock.ts  fhir-mock.ts  message-mock.ts
.trash/lib/: api-client.ts
.trash/services/: developers.service.ts  fhir.service.ts  integrations.service.ts  messages.service.ts
.trash/stores/: useFhirStore.ts  useMessageStore.ts  useSettingsStore.ts  useUIStore.ts  (+1 more)
FHIRBRIDGEX/: .env.example  .gitignore  FHIRBridge_Developer_Handover_Guide.txt  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  requirements.txt  start.sh
constants/: routes.ts
hms/: README.md  app.py
services/: auth.service.ts  settings.service.ts
stores/: useAuthStore.ts  useDeveloperStore.ts
types/: onboarding.ts
web/: API_CONTRACT.md  README.md  next.config.mjs  next.config.ts  package-lock.json  package.json  wrangler.toml
(+317 files in other folders)
