[tool.poetry]
name = "medibridgex-backend"
version = "0.1.0"
description = "FastAPI backend for MediBridgeX Healthcare Interoperability Platform"
authors = ["MediBridgeX Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^42.0.8"
hl7 = "^0.4.5"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
